--- a/E3-E4/docker-compose.yml
+++ b/E3-E4/docker-compose.yml
@@ -91,6 +91,23 @@ services:
         networks:
             - chatbot_network
 
+    node-exporter:
+        image: prom/node-exporter:latest
+        container_name: chatbot_sav_node_exporter
+        ports:
+            - "9100:9100"
+        volumes:
+            - /proc:/host/proc:ro
+            - /sys:/host/sys:ro
+            - /:/rootfs:ro
+        command:
+            - "--path.procfs=/host/proc"
+            - "--path.rootfs=/rootfs"
+            - "--path.sysfs=/host/sys"
+            - "--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)"
+        networks:
+            - chatbot_network
+
 volumes:
     chatbot_postgres_data:
     prometheus_data:
