--- a/E3-E4/monitoring/prometheus/prometheus.yml
+++ b/E3-E4/monitoring/prometheus/prometheus.yml
@@ -21,4 +21,7 @@ scrape_configs:
           - targets: ["postgres-exporter:9187"]
       scrape_interval: 30s
 
-
+    - job_name: "node-exporter"
+      static_configs:
+          - targets: ["node-exporter:9100"]
+      scrape_interval: 15s
