Add Discord webhook configuration and update Grafana provisioning
- Added DISCORD_WEBHOOK_URL to .env_example for Grafana alerting.
- Updated docker-compose.yml to include the new Discord webhook environment variable for Grafana.
- Modified Prometheus datasource configuration to include a unique identifier (uid) for Prometheus.
- Removed obsolete alerts.yml file from Prometheus monitoring setup.
- Cleaned up prometheus.yml by removing references to the deleted alerts file.

--- a/E3-E4/.env_example
+++ b/E3-E4/.env_example
@@ -7,6 +7,9 @@ SECRET_KEY=
 # Clé API OpenAI
 OPENAI_API_KEY=
 
+# Webhook Discord pour les alertes Grafana
+DISCORD_WEBHOOK_URL=
+
 # Configuration de l'application
 DEBUG=True
 ENVIRONMENT=development
