Update environment configuration for OpenAI model integration
- Added OPENAI_MODEL variable to .env_example for model specification.
- Updated docker-compose.yml to include OPENAI_MODEL in environment variables.
- Modified FastAPI routes to utilize OPENAI_MODEL from environment variables for ChatOpenAI initialization.

--- a/E3-E4/docker-compose.yml
+++ b/E3-E4/docker-compose.yml
@@ -32,6 +32,7 @@ services:
             - DATABASE_URL=postgresql://postgres:password@db:5432/chatbot_sav
             - SECRET_KEY=your-super-secret-key-change-in-production
             - OPENAI_API_KEY=${OPENAI_API_KEY}
+            - OPENAI_MODEL=${OPENAI_MODEL}
             - ADMIN_USERNAME=${ADMIN_USERNAME}
             - ADMIN_EMAIL=${ADMIN_EMAIL}
             - ADMIN_PASSWORD=${ADMIN_PASSWORD}
