--- a/E3-E4/.env_example
+++ b/E3-E4/.env_example
@@ -7,6 +7,7 @@ SECRET_KEY=
 # Clé API OpenAI
 OPENAI_API_KEY=
 OPENAI_MODEL=
+MODEL_TEMPERATURE=
 
 # Webhook Discord pour les alertes Grafana
 DISCORD_WEBHOOK_URL=
