Refactor FastAPI application and enhance error handling
- Updated .env_example to include ALLOWED_ORIGINS and ACCESS_TOKEN_EXPIRE_MINUTES for improved configuration.
- Refactored app.py to read environment variables for DEBUG and ENVIRONMENT settings, enhancing logging and CORS configuration.
- Implemented global exception handlers for HTTP errors, providing tailored responses for 401 and 404 status codes.
- Enhanced auth.py to ensure ACCESS_TOKEN_EXPIRE_MINUTES is parsed correctly, with a default value of 30 minutes.
- Updated routes.py to secure cookies based on the DEBUG environment variable.
- Improved HTML templates for better structure and accessibility, including new error handling templates.
- Added CSS styles for improved UI consistency across various components.

--- a/E3-E4/.env_example
+++ b/E3-E4/.env_example
@@ -8,13 +8,14 @@ SECRET_KEY=
 OPENAI_API_KEY=
 OPENAI_MODEL=
 MODEL_TEMPERATURE=
-
+ALLOWED_ORIGINS=
 # Webhook Discord pour les alertes Grafana
 DISCORD_WEBHOOK_URL=
 
 # Configuration de l'application
-DEBUG=True
-ENVIRONMENT=development
+DEBUG=
+ENVIRONMENT=
+ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # Configuration de l'administrateur par défaut
 ADMIN_USERNAME=
