Implement Alembic migrations and enhance FastAPI startup process
- Integrated Alembic for schema migrations in the FastAPI application, ensuring automatic application of migrations at startup.
- Updated the Dockerfile to execute `alembic upgrade head` before starting the Uvicorn server, preventing schema mismatches.
- Added a new `last_login` field to the User model to demonstrate migration capabilities.
- Expanded the README to include detailed instructions on using Alembic for managing database migrations.

--- a/E3-E4/fastapi/Dockerfile
+++ b/E3-E4/fastapi/Dockerfile
@@ -24,5 +24,6 @@ RUN mkdir -p uploads static templates
 # Exposer le port
 EXPOSE 8000
 
-# Commande par défaut
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"] 
+# Commande par défaut: appliquer les migrations puis démarrer l'app
+CMD ["/bin/sh", "-c", "alembic upgrade head && uvicorn app:app --host 0.0.0.0 --port 8000"]
+# CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
