--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -63,14 +63,14 @@ jobs:
                   retention-days: 30
                   
             - name: Log in to Docker Hub
-              if: ${{ github.event_name == 'push' }}
+              if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') }}
               uses: docker/login-action@v3
               with:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
             - name: Build and push Docker image
-              if: ${{ github.event_name == 'push' }}
+              if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') }}
               uses: docker/build-push-action@v5
               with:
                   context: E3-E4/fastapi
